<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">DEMO APP</string>

    <!--Generic Dialog Messages-->
    <string name="dialog_btn_ok_text">@android:string/ok</string>
    <string name="dialog_btn_cancel_text">@android:string/cancel</string>
    <string name="button_yes">YES</string>
    <string name="button_no">NO</string>

    <!-- Login Fragment-->
    <string name="str_google_sign_in">Sign In By Google</string>
    <string name="str_sign_in" tools:ignore="TypographyEllipsis">Logging In...Please wait</string>

    <!--Encrypt Decrypt Fragment-->
    <string name="str_message">Enter Message</string>
    <string name="str_secret_key">Enter Secret Key</string>
    <string name="str_encrypt">Encrypt</string>
    <string name="str_decrypt">Decrypt</string>
    <string name="str_default_err_message">Something Went Wrong..Please try again</string>
    <string name="str_encrypted_text">Encrypted Text :</string>
    <string name="str_decrypted_text">Decrypted Text :</string>

    <!-- Bottom Navigation Menu-->
    <string name="str_encryption">Encryption</string>
    <string name="str_to_do">To-Do</string>
    <string name="str_stopwatch">Stopwatch</string>

    <!-- Drawer Menu-->
    <string name="str_change_language">Change Language</string>
    <string name="str_logout">Logout</string>
    <string name="str_logout_msg" tools:ignore="TypographyEllipsis">Logging Out...Please wait</string>
    <string name="str_logout_info">Are you sure want to Logout?</string>
    <string name="str_user_logo">User Logo</string>
    <string name="str_welcome">Welcome %s</string>

    <!-- To Do List Fragment-->
    <string name="str_no_task_added">No Task Added.Please add task by clicking add button.</string>
    <string name="str_add_task">Add Task</string>
    <string name="str_delete_task">Delete</string>
    <string name="str_delete_task_info">Are you sure you want to delete this task?</string>


    <!-- Add Task Fragment-->
    <string name="str_enter_task">Enter Task Name</string>
    <string name="str_select_task_date">Select Task Date</string>
    <string name="str_select_task_time">Select Task Time</string>
    <string name="str_save">Save</string>
    <string name="str_clear">Clear</string>
    <string name="str_formatted_time">%s:%s %s</string>
    <string name="str_task_added">Task Added</string>
    <string name="str_task_added_success">Task Added Successfully</string>

    <!-- StopWatch Fragment-->
    <string name="str_stop">Stop</string>
    <string name="str_play">Play</string>
    <string name="str_pause">Pause</string>
    <string name="str_timer">%s:%s:%s</string>
    <string name="str_default_timer">00:00:00</string>

    <!-- Change Language Strings-->
    <string name="str_english" translatable="false">English</string>
    <string name="str_arabic" translatable="false">Arabic</string>

</resources>