<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp">

        <EditText
            android:id="@+id/edit_text_task_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_bg"
            android:hint="@string/str_enter_task"
            android:importantForAutofill="no"
            android:inputType="text"
            android:textColor="@color/black"
            android:textSize="@dimen/edit_text_size" />

        <EditText
            android:id="@+id/edit_text_task_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edit_text_task_name"
            android:layout_marginTop="20dp"
            android:background="@drawable/edit_text_bg"
            android:focusable="false"
            android:hint="@string/str_select_task_date"
            android:importantForAutofill="no"
            android:inputType="date"
            android:textColor="@color/black"
            android:textSize="@dimen/edit_text_size" />

        <EditText
            android:id="@+id/edit_text_task_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edit_text_task_date"
            android:layout_marginTop="20dp"
            android:background="@drawable/edit_text_bg"
            android:focusable="false"
            android:hint="@string/str_select_task_time"
            android:importantForAutofill="no"
            android:inputType="time"
            android:textColor="@color/black"
            android:textSize="@dimen/edit_text_size" />

        <LinearLayout
            android:id="@+id/linear_layout_action"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edit_text_task_time"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_save"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="15dp"
                android:layout_weight="0.5"
                android:background="@drawable/button_bg"
                android:text="@string/str_save"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/button_text_size"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/button_clear"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_weight="0.5"
                android:background="@drawable/button_bg"
                android:text="@string/str_clear"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/button_text_size"
                tools:ignore="ButtonStyle" />

        </LinearLayout>

    </RelativeLayout>


</ScrollView>
